# StudioPlatform

./: README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  wrangler.toml
.github/workflows/: deploy.yml
app/: main.py  models.py  service.py  store.py
docs/: product-mapping.md
scripts/: local-e2e-demo.ps1
src/: data.ts  index.ts  session-do.ts
tests/: test_api.py
widget/: package.json  vite.config.ts
widget/src/: app.tsx  index.tsx  styles.css
